@@ -29,6 +29,7 @@
 * Added comparable score to Benchmark.
 * Added a vector proxy class forwarding to Eigen.
 * Replaced all arithmetic by assignment vector operations.
+* Replaced Eigen library by custom vector implementation.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
